--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: http://git.debian.org/?p=mini-dinstall/mini-dinstall.git
 
 Package: mini-dinstall
 Architecture: all
-Depends: ${python:Depends}, python-apt (>= 0.7.93), apt-utils, ${misc:Depends}
+Depends: ${python:Depends}, python-apt (>= 0.7.93), apt-utils, adduser, ${misc:Depends}
 Recommends: gpgv
 Suggests: debian-keyring
 Description: daemon for updating Debian packages in a repository
